--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "interoperabilitas",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "homepage": "https://cintyaagusti.github.io/ProyekInteroperabilitas",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -14,6 +15,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -30,5 +33,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.2.0"
   }
 }
